style: 优化代码